{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 89,
  "lineage": "01c6e79f-4fd5-471b-43cc-c2984f5a3a32",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "egress-only",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eigw-041e1a1529c0172e1",
            "tags": {
              "Name": "Egress_Only_igw-TF"
            },
            "tags_all": {
              "Name": "Egress_Only_igw-TF"
            },
            "vpc_id": "vpc-087016f1f4386f2fa"
          },
          "dependencies": [
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "VPCity_eip_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d7e3b49c88d090a",
            "domain": "vpc",
            "id": "eipalloc-08d7e3b49c88d090a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-235-176-137.compute-1.amazonaws.com",
            "public_ip": "34.235.176.137",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "VPCity-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132175462706:internet-gateway/igw-0525c65973830acc6",
            "id": "igw-0525c65973830acc6",
            "owner_id": "132175462706",
            "tags": {
              "Name": "VPCity_igw-TF"
            },
            "tags_all": {
              "Name": "VPCity_igw-TF"
            },
            "vpc_id": "vpc-087016f1f4386f2fa"
          },
          "dependencies": [
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "VPCity-NAT-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d7e3b49c88d090a",
            "connectivity_type": "public",
            "id": "nat-08ccd27eb2eee9a4a",
            "network_interface_id": "eni-04e39eb66e218f9d3",
            "private_ip": "10.0.0.62",
            "public_ip": "34.235.176.137",
            "subnet_id": "subnet-017ab123f677edd61",
            "tags": {
              "Name": "VPCity_nat_gw-TF"
            },
            "tags_all": {
              "Name": "VPCity_nat_gw-TF"
            }
          },
          "dependencies": [
            "aws_eip.VPCity_eip_nat_gateway",
            "aws_internet_gateway.VPCity-igw",
            "aws_subnet.public-subnet",
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-0db7988148a304adb",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-041e1a1529c0172e1",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0525c65973830acc6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.1.0/25",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08ccd27eb2eee9a4a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private_RT-TF"
            },
            "tags_all": {
              "Name": "Private_RT-TF"
            },
            "timeouts": null,
            "vpc_id": "vpc-087016f1f4386f2fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_egress_only_internet_gateway.egress-only",
            "aws_eip.VPCity_eip_nat_gateway",
            "aws_internet_gateway.VPCity-igw",
            "aws_nat_gateway.VPCity-NAT-gw",
            "aws_subnet.public-subnet",
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-09cce8b896578da0c",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-041e1a1529c0172e1",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0525c65973830acc6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/21",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0525c65973830acc6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_RT-TF"
            },
            "tags_all": {
              "Name": "Public_RT-TF"
            },
            "timeouts": null,
            "vpc_id": "vpc-087016f1f4386f2fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_egress_only_internet_gateway.egress-only",
            "aws_internet_gateway.VPCity-igw",
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Database-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Spare-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Alpha",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132175462706:security-group/sg-0129fae9dda927b1b",
            "description": "Allow HTTP and Bravo",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0129fae9dda927b1b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02b482476e209d508"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Alpha",
            "name_prefix": "",
            "owner_id": "132175462706",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Alpha_SG-TF"
            },
            "tags_all": {
              "Name": "Alpha_SG-TF"
            },
            "timeouts": null,
            "vpc_id": "vpc-087016f1f4386f2fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Bravo",
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Bravo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132175462706:security-group/sg-02b482476e209d508",
            "description": "Allow HTTP, SSH, and Alpha",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b482476e209d508",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP, SSH and Alpha from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Bravo",
            "name_prefix": "",
            "owner_id": "132175462706",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bravo_SG-TF"
            },
            "tags_all": {
              "Name": "Bravo_SG-TF"
            },
            "timeouts": null,
            "vpc_id": "vpc-087016f1f4386f2fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Delta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132175462706:security-group/sg-03509d524cb629310",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03509d524cb629310",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP, SSH and Alpha from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Delta",
            "name_prefix": "",
            "owner_id": "132175462706",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Delta_SG-TF"
            },
            "tags_all": {
              "Name": "Delta_SG-TF"
            },
            "timeouts": null,
            "vpc_id": "vpc-087016f1f4386f2fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132175462706:subnet/subnet-0bb0e2be99a4e7cef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.128/26",
            "id": "subnet-0bb0e2be99a4e7cef",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "132175462706",
            "tags": {
              "Name": "Database_Subnet-TF"
            },
            "tags_all": {
              "Name": "Database_Subnet-TF"
            },
            "vpc_id": "vpc-087016f1f4386f2fa"
          },
          "dependencies": [
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132175462706:subnet/subnet-050833d37e803b4c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/25",
            "id": "subnet-050833d37e803b4c1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "132175462706",
            "tags": {
              "Name": "Private_Subnet-TF"
            },
            "tags_all": {
              "Name": "Private_Subnet-TF"
            },
            "vpc_id": "vpc-087016f1f4386f2fa"
          },
          "dependencies": [
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132175462706:subnet/subnet-017ab123f677edd61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-017ab123f677edd61",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "132175462706",
            "tags": {
              "Name": "Public_Subnet-TF"
            },
            "tags_all": {
              "Name": "Public_Subnet-TF"
            },
            "vpc_id": "vpc-087016f1f4386f2fa"
          },
          "dependencies": [
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "spare-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132175462706:subnet/subnet-022becd46618d8a8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.192/26",
            "id": "subnet-022becd46618d8a8a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "132175462706",
            "tags": {
              "Name": "Spare_Subnet-TF"
            },
            "tags_all": {
              "Name": "Spare_Subnet-TF"
            },
            "vpc_id": "vpc-087016f1f4386f2fa"
          },
          "dependencies": [
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPCity",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132175462706:vpc/vpc-087016f1f4386f2fa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/21",
            "default_network_acl_id": "acl-00fda0f011a852244",
            "default_route_table_id": "rtb-0beb143f645fd3200",
            "default_security_group_id": "sg-0aa87f5ea3dd2a7be",
            "dhcp_options_id": "dopt-a3c3f8d9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-087016f1f4386f2fa",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0beb143f645fd3200",
            "owner_id": "132175462706",
            "tags": {
              "Name": "VPCity-TF"
            },
            "tags_all": {
              "Name": "VPCity-TF"
            }
          }
        }
      ]
    }
  ]
}